@@ -1,33 +1,25 @@
 package hk.ljx.framework.mq.idempotent;
 
-import org.springframework.jdbc.core.JdbcTemplate;
+import hk.ljx.framework.mq.idempotent.mapper.MqConsumeRecordDOMapper;
+import lombok.RequiredArgsConstructor;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 /**
- * t_mq_consume_record 消费幂等记录存储（JdbcTemplate 实现，不依赖 MyBatis）。
+ * t_mq_consume_record 消费幂等记录存储（统一由 MyBatis 实现）。
  */
+@RequiredArgsConstructor
 public class MqConsumeRecordStore {
 
-    private final JdbcTemplate jdbcTemplate;
-
-    public MqConsumeRecordStore(JdbcTemplate jdbcTemplate) {
-        this.jdbcTemplate = jdbcTemplate;
-    }
+    private final MqConsumeRecordDOMapper mapper;
 
     public int exists(String consumerGroup, String messageKey) {
-        Integer count = jdbcTemplate.queryForObject(
-                "select count(1) from t_mq_consume_record where consumer_group = ? and message_key = ?",
-                Integer.class, consumerGroup, messageKey);
-        return count == null ? 0 : count;
+        return mapper.exists(consumerGroup, messageKey);
     }
 
     public int insert(String consumerGroup, String messageKey) {
-        return jdbcTemplate.update(
-                "insert into t_mq_consume_record (consumer_group, message_key, create_time) values (?, ?, now())",
-                consumerGroup, messageKey);
+        return mapper.insert(consumerGroup, messageKey);
     }
 
     /**
@@ -35,15 +27,9 @@ public class MqConsumeRecordStore {
      */
     public List<String> findExisting(String consumerGroup, List<String> messageKeys) {
         if (messageKeys == null || messageKeys.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
-        String inClause = String.join(",", Collections.nCopies(messageKeys.size(), "?"));
-        List<Object> args = new ArrayList<>(messageKeys.size() + 1);
-        args.add(consumerGroup);
-        args.addAll(messageKeys);
-        return jdbcTemplate.queryForList(
-                "select message_key from t_mq_consume_record where consumer_group = ? and message_key in (" + inClause + ")",
-                String.class, args.toArray());
+        return mapper.findExisting(consumerGroup, messageKeys);
     }
 
     /**
@@ -53,23 +39,10 @@ public class MqConsumeRecordStore {
         if (messageKeys == null || messageKeys.isEmpty()) {
             return 0;
         }
-        StringBuilder sql = new StringBuilder(
-                "insert ignore into t_mq_consume_record (consumer_group, message_key, create_time) values ");
-        List<Object> args = new ArrayList<>(messageKeys.size() * 2 + 1);
-        for (int i = 0; i < messageKeys.size(); i++) {
-            if (i > 0) {
-                sql.append(", ");
-            }
-            sql.append("(?, ?, now())");
-            args.add(consumerGroup);
-            args.add(messageKeys.get(i));
-        }
-        return jdbcTemplate.update(sql.toString(), args.toArray());
+        return mapper.insertIgnoreBatch(consumerGroup, messageKeys);
     }
 
     public int purgeOlderThanDays(int days, int batchSize) {
-        return jdbcTemplate.update(
-                "delete from t_mq_consume_record where create_time < date_sub(now(), interval ? day) limit ?",
-                days, batchSize);
+        return mapper.purgeOlderThanDays(days, batchSize);
     }
 }
